Fixed a bug in reverseToggleClasses in animationHelper.js. Would previously throw an error if the otherDivList was empty. Added accordions to the about me section. Added a bunch of accordion styling as well as some animations for it in scripts.js. Fixed an odd z-index bug in the navs. Changed the resume section to flex. Cleaned up a bunch of the handleAboutMeToggle code. Added some width to the dividers as they wouldn't work with flex.

--- a/css/nav-styles.css
+++ b/css/nav-styles.css
@@ -3,7 +3,7 @@
 header{
     position: sticky;
     top: 0;
-    z-index: 999;
+    z-index: 1;
 }
 
 nav {
@@ -32,6 +32,10 @@ nav a:hover{
     background: var(--ui-nav-grey);
     min-width: 160px;
     box-shadow: 0 8px 16px  rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.nav-dropdown-content > *{
     z-index: 1;
 }
 
