--- a/css/resume-styles.css
+++ b/css/resume-styles.css
@@ -41,11 +41,19 @@
     }
 }
 
+#myResume{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
 .resume-nav{
     padding: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 9999;
 }
 
 #resumeSkillsSection h3, h4 {
